# color_curve

./: CMakeLists.txt  README.md
include/: color_curve.h
src/: color_curve.cpp  main.cpp  testing.txt
